@@ -500,7 +500,7 @@ int main(int argc, char** argv)
     LOG(INFO) << "Initializing systemd state";
 
     // under cgroupsv2, systemd does not have it's own cgroups hierarchy.
-    if (flags.enable_cgroupsv2) {
+    if (flags.enable_cgroups_v2) {
       flags.cgroups_hierarchy = "/sys/fs/cgroup";
     }
 
@@ -508,7 +508,7 @@ int main(int argc, char** argv)
     systemdFlags.enabled = flags.systemd_enable_support;
     systemdFlags.runtime_directory = flags.systemd_runtime_directory;
     systemdFlags.cgroups_hierarchy = flags.cgroups_hierarchy;
-    systemdFlags.enable_cgroupsv2 = flags.enable_cgroupsv2;
+    systemdFlags.enable_cgroups_v2 = flags.enable_cgroups_v2;
 
     Try<Nothing> initialize = systemd::initialize(systemdFlags);
     if (initialize.isError()) {
